--- a/module-play/src/main/AndroidManifest.xml
+++ b/module-play/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.yunge.module_play">
 
+<!--    android:screenOrientation="portrait"-->
     <application tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".ui.activty.PlayVideoActivity"
-            android:screenOrientation="portrait"
+
             android:theme="@style/play_AppTheme" />
     </application>
 
