--- a/module-play/src/main/debug/AndroidManifest.xml
+++ b/module-play/src/main/debug/AndroidManifest.xml
@@ -15,7 +15,7 @@
 <!--        android:screenOrientation="portrait"-->
         <activity
             android:name=".ui.activty.PlayVideoActivity"
-
+            android:screenOrientation="landscape"
             android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
